--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Montserrat";
-  font-weight: bold;
+  font-weight: 900;
 }
 
 p {
@@ -53,7 +53,7 @@ p {
 .navbar-brand {
   font-family: "Ubuntu";
   font-size: 2.5rem;
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .nav-item {
